[package]
name = "streamer-screen-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
epd-waveshare = "0.5.0"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
embedded-graphics = "0.7"
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
heapless = "0.7.16"


